# browser-paths

./: CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
src/: browser_name.rs  browser_path.rs  lib.rs  main.rs
tests/: integration_test.rs
