[package]
name = "browser-paths"
version = "1.0.0"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "A template for a new Rust project"
documentation = "https://docs.rs/browser-paths"
readme = "README.md"
homepage = "https://github.com/un-rust/browser-paths"
repository = "https://github.com/un-rust/browser-paths"
license = "Apache-2.0"
keywords = [ ]
categories = [ "development-tools" ]
rust-version = "1.85.0"

[dependencies]
urlogger = "1.0.0"
which = "8.0.0"
