[package]
name = "browser-paths"
version = "1.0.0"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "Get the path of the browser, support Chrome and Edge."
documentation = "https://docs.rs/browser-paths"
readme = "README.md"
homepage = "https://github.com/un-rust/browser-paths"
repository = "https://github.com/un-rust/browser-paths"
license = "Apache-2.0"
keywords = [ ]
categories = [ "development-tools" ]
rust-version = "1.85.0"

[dependencies]
urlogger = "1.1.1"
which = "8.0.0"
